APIs/googleapis.com/blogger/v2/python-client/README.md
# openapi-client
The Blogger API provides access to posts, comments and pages of a Blogger blog.

This Python package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v2
- Package version: 1.0.0
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.PythonClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Requirements.

Python 3.7+

## Installation & Usage
### pip install

If the python package is hosted on a repository, you can install directly using:

```sh
pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git
```
(you may need to run `pip` with root permission: `sudo pip install git+https://github.com/GIT_USER_ID/GIT_REPO_ID.git`)

Then import the package:
```python
import openapi_client
```

### Setuptools

Install via [Setuptools](http://pypi.python.org/pypi/setuptools).

```sh
python setup.py install --user
```
(or `sudo python setup.py install` to install the package for all users)

Then import the package:
```python
import openapi_client
```

### Tests

Execute `pytest` to run the tests.

## Getting Started

Please follow the [installation procedure](#installation--usage) and then run the following:

```python

import openapi_client
from openapi_client.rest import ApiException
from pprint import pprint

# Defining the host is optional and defaults to https://blogger.googleapis.com
# See configuration.py for a list of all supported configuration parameters.
configuration = openapi_client.Configuration(
    host = "https://blogger.googleapis.com"
)

# The client must configure the authentication and authorization parameters
# in accordance with the API server security policy.
# Examples for each auth method are provided below, use the example that
# satisfies your auth use case.

configuration.access_token = os.environ["ACCESS_TOKEN"]

configuration.access_token = os.environ["ACCESS_TOKEN"]


# Enter a context with an instance of the API client
with openapi_client.ApiClient(configuration) as api_client:
    # Create an instance of the API class
    api_instance = openapi_client.BlogsApi(api_client)
    blog_id = 'blog_id_example' # str | 
    xgafv = 'xgafv_example' # str | V1 error format. (optional)
    access_token = 'access_token_example' # str | OAuth access token. (optional)
    alt = 'alt_example' # str | Data format for response. (optional)
    param_callback = 'param_callback_example' # str | JSONP (optional)
    fields = 'fields_example' # str | Selector specifying which fields to include in a partial response. (optional)
    key = 'key_example' # str | API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token. (optional)
    oauth_token = 'oauth_token_example' # str | OAuth 2.0 token for the current user. (optional)
    pretty_print = True # bool | Returns response with indentations and line breaks. (optional)
    quota_user = 'quota_user_example' # str | Available to use for quota purposes for server-side applications. Can be any arbitrary string assigned to a user, but should not exceed 40 characters. (optional)
    upload_protocol = 'upload_protocol_example' # str | Upload protocol for media (e.g. \"raw\", \"multipart\"). (optional)
    upload_type = 'upload_type_example' # str | Legacy upload protocol for media (e.g. \"media\", \"multipart\"). (optional)

    try:
        api_response = api_instance.blogger_blogs_get(blog_id, xgafv=xgafv, access_token=access_token, alt=alt, param_callback=param_callback, fields=fields, key=key, oauth_token=oauth_token, pretty_print=pretty_print, quota_user=quota_user, upload_protocol=upload_protocol, upload_type=upload_type)
        print("The response of BlogsApi->blogger_blogs_get:\n")
        pprint(api_response)
    except ApiException as e:
        print("Exception when calling BlogsApi->blogger_blogs_get: %s\n" % e)

```

## Documentation for API Endpoints

All URIs are relative to *https://blogger.googleapis.com*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*BlogsApi* | [**blogger_blogs_get**](docs/BlogsApi.md#blogger_blogs_get) | **GET** /v2/blogs/{blogId} | 
*BlogsApi* | [**blogger_blogs_list**](docs/BlogsApi.md#blogger_blogs_list) | **GET** /v2/users/{userId}/blogs | 
*CommentsApi* | [**blogger_comments_get**](docs/CommentsApi.md#blogger_comments_get) | **GET** /v2/blogs/{blogId}/posts/{postId}/comments/{commentId} | 
*CommentsApi* | [**blogger_comments_list**](docs/CommentsApi.md#blogger_comments_list) | **GET** /v2/blogs/{blogId}/posts/{postId}/comments | 
*PagesApi* | [**blogger_pages_get**](docs/PagesApi.md#blogger_pages_get) | **GET** /v2/blogs/{blogId}/pages/{pageId} | 
*PagesApi* | [**blogger_pages_list**](docs/PagesApi.md#blogger_pages_list) | **GET** /v2/blogs/{blogId}/pages | 
*PostsApi* | [**blogger_posts_get**](docs/PostsApi.md#blogger_posts_get) | **GET** /v2/blogs/{blogId}/posts/{postId} | 
*PostsApi* | [**blogger_posts_list**](docs/PostsApi.md#blogger_posts_list) | **GET** /v2/blogs/{blogId}/posts | 
*UsersApi* | [**blogger_users_get**](docs/UsersApi.md#blogger_users_get) | **GET** /v2/users/{userId} | 


## Documentation For Models

 - [Blog](docs/Blog.md)
 - [BlogList](docs/BlogList.md)
 - [BlogLocale](docs/BlogLocale.md)
 - [BlogPages](docs/BlogPages.md)
 - [BlogPerUserInfo](docs/BlogPerUserInfo.md)
 - [BlogPosts](docs/BlogPosts.md)
 - [BlogUserInfo](docs/BlogUserInfo.md)
 - [Comment](docs/Comment.md)
 - [CommentAuthor](docs/CommentAuthor.md)
 - [CommentAuthorImage](docs/CommentAuthorImage.md)
 - [CommentBlog](docs/CommentBlog.md)
 - [CommentInReplyTo](docs/CommentInReplyTo.md)
 - [CommentList](docs/CommentList.md)
 - [CommentPost](docs/CommentPost.md)
 - [Page](docs/Page.md)
 - [PageAuthor](docs/PageAuthor.md)
 - [PageBlog](docs/PageBlog.md)
 - [PageList](docs/PageList.md)
 - [Post](docs/Post.md)
 - [PostAuthor](docs/PostAuthor.md)
 - [PostBlog](docs/PostBlog.md)
 - [PostImagesInner](docs/PostImagesInner.md)
 - [PostList](docs/PostList.md)
 - [PostLocation](docs/PostLocation.md)
 - [PostReplies](docs/PostReplies.md)
 - [User](docs/User.md)
 - [UserBlogs](docs/UserBlogs.md)
 - [UserLocale](docs/UserLocale.md)


<a id="documentation-for-authorization"></a>
## Documentation For Authorization


Authentication schemes defined for the API:
<a id="Oauth2"></a>
### Oauth2

- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/blogger**: Manage your Blogger account

<a id="Oauth2c"></a>
### Oauth2c

- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
 - **https://www.googleapis.com/auth/blogger**: Manage your Blogger account


## Author




